Fix mobile scroll: add overflow hidden to body

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,6 +2,11 @@
     outline: 1px solid red;
 } */
 
+body
+{
+    overflow: hidden;
+}
+
 main
 {
     display: flex;
