--- a/assets/css/password_reset.css
+++ b/assets/css/password_reset.css
@@ -1,3 +1,8 @@
+body
+{
+    overflow: hidden;
+}
+
 header
 {
     display : flex;
