--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -1,3 +1,9 @@
+body
+{
+    overflow: hidden;
+}
+
+
 .overlay {
   display: none ;
   position: fixed;
